@@ -12,7 +12,7 @@ Description: Functional gradient descent algorithm
   and interaction models to potentially high-dimensional data.
 Depends: R (>= 2.9.0), methods, stats
 Imports: Matrix, survival, splines, lattice
-Suggests: multicore, party (>= 0.9-9993), ipred, MASS, fields, BayesX
+Suggests: multicore, party (>= 0.9-9993), ipred, MASS, fields, BayesX, mgcv
 LazyLoad: yes
 LazyData: yes
 License: GPL-2
