@@ -1,3 +1,4 @@
+
                 CHANGES in `mboost' VERSION 2.1-0 (2010-03-04)
 
   o  added base-learners for radial basis functions (brad())
@@ -5,13 +6,16 @@
 
   o  added base-learners for Markov random fields (bmrf())
 
+  o  bols(x, intercept = FALSE) only reasonable if x is centered
+
+  o  bbs(x, cyclic = TRUE) for cyclic covariates ensures that
+     predictions at the boundaries coincide
+
   o  changed behavior of cvrisk() if weights are used:
      out-of-bag-risk now weighted according to "weights" as
      specified in call to mboost
 
   o  added family for AUC loss function
-
-  o  bols(x, intercept = FALSE) only reasonable if x is centered
 
   o  improved predict.mboost(): added names where missing and the
      offset as attribute where applicable.
